--- a/IgnatevaLanguage/ClientPage.xaml
+++ b/IgnatevaLanguage/ClientPage.xaml
@@ -13,7 +13,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="500"/>
-            
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <ListView Name="ClientListView" Grid.Row="1">
@@ -22,7 +22,8 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="600"/>
+                            <ColumnDefinition Width="540"/>
+                            <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
@@ -32,7 +33,7 @@
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <Image Grid.Column="0" HorizontalAlignment="Center"
-                               Grid.RowSpan="5">
+                               Grid.RowSpan="5" MaxHeight="180">
                             <Image.Source>
                                 <Binding Path="PhotoPath">
                                     <Binding.TargetNullValue>
@@ -86,10 +87,49 @@
                             <TextBlock Text="{Binding VisitCount, StringFormat='Кол-во посещений: \{0\}'}"
                                        FontSize="16"/>
                         </WrapPanel>
-                        
+
+                        <Button Content="удалить" Name="DeleteBtn" Click="DeleteBtn_Click"
+                                Grid.Column="2" Grid.Row="0" Grid.RowSpan="5"
+                                VerticalAlignment="Center" FontSize="18"/>
+
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal"
+                    HorizontalAlignment="Right" VerticalAlignment="Center">
+            <TextBlock Name="ShownRecordsQTB" FontSize="16" Margin="5"/>
+
+            <TextBlock Text=" из " FontSize="16" Margin="5"/>
+
+            <TextBlock Name="AllRecordsQTB" FontSize="16" Margin="5"/>
+
+            <TextBlock Text=" Выводить по " FontSize="16" Margin="5"/>
+
+            <ComboBox Name="ShownRecordsCombo" SelectionChanged="ShownRecordsCombo_SelectionChanged"
+                      FontSize="16" Width="70" Height="28" Margin="5">
+                <TextBlock>10</TextBlock>
+                <TextBlock>50</TextBlock>
+                <TextBlock>200</TextBlock>
+                <TextBlock>Все</TextBlock>
+            </ComboBox>
+
+            <Button Content="&lt;" Name="PrevPageBtn" Click="PrevPageBtn_Click"
+                    FontSize="16" Width="16" Height="28" Margin="5"/>
+
+            <ListBox Name="PageListBox" FontSize="16" MouseUp="PageListBox_MouseUp">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal" VerticalAlignment="Center"/>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+            </ListBox>
+
+            <Button Content="&gt;" Name="NextPageBtn" Click="NextPageBtn_Click"
+                    FontSize="16" Width="16" Height="28" Margin="5"/>
+
+        </StackPanel>
+        
     </Grid>
 </Page>
